<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    android:orientation="vertical"
    tools:context=".ConsultaDadosActivity" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#3ba0e2" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:contentDescription="@string/todo"

            />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            />

        <LinearLayout
            android:id="@+id/layoutCorFundo"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:background="#749ff5"
            android:gravity="center" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/consultar_dados"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#ffffff"
                />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:text="@string/nome"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#000000"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txtnome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:text="@string/nomeConsulta"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#2a58b4"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:text="@string/telefone"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#000000"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txttelefone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:text="@string/telefoneConsulta"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#2a58b4"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:text="@string/e_mail"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#000000"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txtemail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:text="@string/emailConsulta"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#2a58b4"
        android:textSize="18sp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="15dp" >

        <ImageView
            android:id="@+id/imgprimeiro"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/todo"
            android:scaleType="fitXY"

             />

        <ImageView
            android:id="@+id/imganterior"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/todo"
            android:scaleType="fitXY"

             />

        <ImageView
            android:id="@+id/imgproximo"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/todo"
            android:scaleType="fitXY"

             />

        <ImageView
            android:id="@+id/imgultimo"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/todo"
            android:scaleType="fitXY"

             />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="15dp" >

        <TextView
            android:id="@+id/txtstatus_registro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status"
            android:textAppearance="?android:attr/textAppearanceLarge"
            />
    </LinearLayout>

</LinearLayout>